docs: change docker-jar/README.md